# fastapi_practice

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_03_0751-d04595267514_create_posts_table.py  2024_09_03_0825-0ae0ebccbe1b_create_profile_table.py  2024_09_03_1459-f1905a8ca1d2_create_orders_table.py  2024_09_03_1516-84b25f6ca8d7_create_order_product_association_table.py  2024_09_03_1600-5f19548dd681_rename_desciption_to_description_product.py  2024_09_03_1628-12c6aca57958_add_column_count_to_order_product_.py  2024_09_04_1540-8e6bb21853ec_add_unit_price_column_to_order_product_.py  52ce29f147c0_create_users_table.py  a44713bad40b_create_products_table.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils_jwt.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
